--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ proc-macro = true
 quote = "1.0.5"
 proc-macro2 = "1.0.13"
 syn = { version = "1.0.22", features = ["full"] }
+
+[dev-dependencies]
+trybuild = "1.0.27"
