--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "delegate-attr"
 description = "Attribute proc-macro to delegate method to a field"
-version = "0.2.9"
+version = "0.3.0"
 authors = ["Xidorn Quan <me@upsuper.org>"]
 edition = "2018"
 repository = "https://github.com/upsuper/delegate-attr"
@@ -16,7 +16,7 @@ proc-macro = true
 [dependencies]
 quote = "1.0.5"
 proc-macro2 = "1.0.13"
-syn = { version = "1.0.22", features = ["full", "extra-traits"] }
+syn = { version = "2", features = ["full"] }
 
 [dev-dependencies]
 trybuild = "1.0.27"
